# sample-cpp-mtcnn

./: CMakeLists.txt  README.md  samplefacecrop.cpp
src/: jniheaders.h  mtcnncrop.cpp  mtcnncrop.h  native.cpp
src/mtcnn/: detector.cpp  mtcnncrop.h
src/mtcnn/mtcnn/: detector.h
